ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Country_State__c/CnP_PaaS__CnP_Country_State__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Country State</label>
    <nameField>
        <displayFormat>StateID-{00000}</displayFormat>
        <label>C&amp;P Country State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P Country State</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>