ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Country_State__c/fields/CnP_PaaS__CnP_Countries__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Countries__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Countries</label>
    <referenceTo>CnP_PaaS__CnP_Countries__c</referenceTo>
    <relationshipLabel>C&amp;P Country State</relationshipLabel>
    <relationshipName>CnP_Country_State</relationshipName>
    <type>Lookup</type>
</CustomField>