ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Country_State__c/fields/CnP_PaaS__State_Abbrev__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__State_Abbrev__c</fullName>
    <label>State Abbrev</label>
    <length>10</length>
    <type>Text</type>
</CustomField>