ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Country_State__c/fields/CnP_PaaS__State_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__State_Name__c</fullName>
    <label>State Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>